src/objects/Sales_Order__c.object
<CustomObject>
    <description>Object to hold sales documents.  This is for the GLO program initially.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Sales Orders</relationshipLabel>
        <relationshipName>CC_Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dental_Product_Total__c</fullName>
        <description>Portion of the sales order stemming from the sale of products related to our dental business</description>
        <label>Dental Product Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Esthetics_Product_Total__c</fullName>
        <description>Portion of the sales order stemming from the sale of products related to our esthetics business</description>
        <label>Esthetics Product Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Esthetics_Service_Total__c</fullName>
        <description>Portion of the sales order stemming from the sale of services related to our esthetics business</description>
        <label>Esthetics Service Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Cost__c</fullName>
        <label>Item Cost</label>
        <summarizedField>Sales_Order_Line_Item__c.Unit_Cost__c</summarizedField>
        <summaryForeignKey>Sales_Order_Line_Item__c.CC_Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <formula>Tax_Total__c + Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Private_Practice_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Private Practice Patient</label>
        <referenceTo>Private_Practice_Patient__c</referenceTo>
        <relationshipLabel>CC Sales Orders</relationshipLabel>
        <relationshipName>CC_Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Link__c</fullName>
        <formula>HYPERLINK(&quot;/apex/sales_order?so_num=&quot; + Id , &quot;SO # &quot; + Name)</formula>
        <label>SO Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Out_Of_State__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We&apos;re not going to develop a shipping to address system at this point, due to the small size. Instead, this boolean will turn off tax calculation when checked.</description>
        <label>Shipping Out Of State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipping</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Subtotal</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Tax Total</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inNetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates the order is in NetSuite</description>
        <label>inNetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inNetsuite_Text__c</fullName>
        <formula>if( inNetSuite__c ,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>inNetsuite Text</label>
        <type>Text</type>
    </fields>
    <label>CC Sales Order</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Sales Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>